examples/test/testpolicy7629.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7629
  namespace: namespace482
spec:
  podSelector:
    matchLabels:
      key42: value31
      key7: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value38
          key12: value10
          key22: value47
      podSelector:
        matchLabels:
          key40: value31
          key4: value0
          key47: value22
